# cortex-agent

./: .gitignore  CORTEX.md  LICENSE  README.md  mkdocs.yml  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/hooks/: sensitive-file-edit.mjs
.github/workflows/: docs-publish.yml  publish-client.yml  publish-server.yml
agent-server/: .dependency-cruiser.cjs  CORTEX.md  node_modules  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
agent-server/defaults/: CORTEX.md  gitignore  mcp-config-slack.json
agent-server/plan/: cortex-md-migration.md  install-rollout.md  install-smoke-baseline.md  npm-install-refactor.md  thread-reliability-investigation.md
agent-server/scripts/: copy-assets.js  copy-web-dist.js  lint-no-slack-shortcodes.ts  migrate-tasks-to-yaml.ts  postinstall-restart-trigger.mjs  (+10 more)
client/: README.md  package-lock.json  package.json  tsconfig.json
desktop/: CORTEX.md  package.json  tsconfig.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docs/: architecture.md  backends.md  browser-access.md  cli-reference.md  configuration.md  cross-machine.md  desktop-app.md  hooks.md  index.md  mcp.md  memory.md  quickstart.md  safety-and-approvals.md  scheduling.md  skills-and-plugins.md  slack-setup.md  tasks.md  threads.md
plan/: session-origin-and-thread-transcript.md
scripts/: sync-cherry-to-public.sh  sync-pull-from-public.sh
web/: CORTEX.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+1114 files in other folders)
